# HTMLParser

./: .gitignore  CMakeLists.txt  OrderedDict.cpp  OrderedDict.h  Scanner.cpp  Scanner.h  Token.h  main.cpp
resources/: basic.html  original-2.html  original-edited.html  original.html  test.html
resources/malwr/: Malwr_new1.html
src/: main.cpp
src/Data Structures/: JSONObject.cpp  JSONObject.h  OrderedDict.cpp  OrderedDict.h  Token.cpp  Token.h  Tree.cpp  Tree.h
src/Exceptions/: Exceptions.cpp  Exceptions.h  ParserExceptions.cpp  ParserExceptions.h
src/Parser/: Parser.cpp  Parser.h
src/Scanner/: Scanner.cpp  Scanner.h
src/Writer/: Writer.cpp  Writer.h
